<resources>
    <string name="app_name">KIP</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign">TODO</string>
    <string name="greeting">Добро пожаловать!</string>
    <string name="enter_password">Введите логин и пароль, чтобы войти</string>
    <string name="enter_group">Выберете вашу группу</string>
    <string name="title_activity_group_activity">Group_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_without_auto">Войти без почты</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_screen">Main_screen</string>
    <string name="title_activity_lecturer_schedule_extended">lecturer_schedule_extended</string>
</resources>