<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Group_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000051"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="272dp"
            android:layout_weight="100"
            android:adjustViewBounds="false"
            android:autoSizeTextType="uniform"
            android:contentDescription="@string/action_sign"
            android:cropToPadding="false"
            app:srcCompat="@drawable/khpi_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/greeting"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:text="@string/greeting" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/enter_group"
            android:textColor="#FFFFFF"
            tools:text="@string/enter_group" />

        <Spinner
            android:id="@+id/spinnerFaculty"
            android:layout_width="274sp"
            android:layout_height="39sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="#FFFFFF"
            android:entries="@array/FacultySel"
            android:gravity="center"
            android:paddingTop="10sp"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinnerCourse"
            android:layout_width="274sp"
            android:layout_height="39sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="#FFFFFF"
            android:entries="@array/Course"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinnerGroup"
            android:layout_width="274sp"
            android:layout_height="39sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="#FFFFFF"
            android:dropDownWidth="wrap_content"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:dropDownHeight="10sp"
            />

        <Button
            android:id="@+id/button_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="95sp"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:text="Далее" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>